# robot_ros2_RTK

./: .gitignore  README.md  README_RU.md  colcon_defaults.yaml
ros2_yolo_ws/src/yolo_segmentation/: convert.py  package.xml  setup.py
ros2_yolo_ws/src/yolo_segmentation/launch/: ultralytics_segmentation.launch.py
ros2_yolo_ws/src/yolo_segmentation/yolo_segmentation/: fps_hrnet_rknn.py  fps_rknn.py  fps_semantic_inference_trt.py  record_screen.py  screen_recorder.py  segmentation_node (Copy).py  segmentation_node.py  segmentation_node_floor.py  ultralytics_segmentation_node.py
ros2_yolo_ws/src/yolo_segmentation/yolov8n-seg_rknn_model/: metadata.yaml
src/hydra/config/datasets/: uhumans2.yaml
src/hydra/config/label_spaces/: ade20k_full_label_space.yaml
src/hydra/config/lcd/: default_lite.yaml
src/hydra/include/hydra/backend/: dsg_updater.h
src/hydra/include/hydra/rooms/: room_finder_config.h
src/hydra/src/backend/: dsg_updater.cpp
src/hydra_ros/hydra_ros/: CMakeLists.txt  package.xml
src/hydra_ros/hydra_ros/app/: hydra_node.cpp
src/hydra_ros/hydra_ros/config/datasets/: uhumans2.yaml
src/hydra_ros/hydra_ros/launch/: bag_semantic_amd.launch.py  bag_yolo_orangepi.launch.py  bag_yolo_ultralytics_amd.launch.py  camera_yolo_orangepi.launch.py  hydra.launch.yaml
src/hydra_ros/hydra_ros/launch/datasets/: uhumans2.launch.yaml
src/hydra_ros/hydra_ros/scripts/: throttled_image_republisher.py
src/hydra_ros/hydra_ros/src/frontend/: object_visualizer.cpp  ros_frontend_publisher.cpp
src/hydra_ros/hydra_visualizer/app/: hydra_visualizer_node.cpp
src/hydra_ros/hydra_visualizer/config/: visualizer_config.yaml
src/hydra_ros/hydra_visualizer/launch/: laptop_rviz.launch.yaml  streaming_visualizer.launch.yaml
src/hydra_ros/hydra_visualizer/rviz/: laptop_streaming_visualizer.rviz  streaming_visualizer.rviz
src/hydra_ros/hydra_visualizer/src/: drawing.cpp
src/ianvs/: .gitignore
src/ianvs/.github/workflows/: ci.yaml  linting.yaml
src/ianvs/ianvs/: CMakeLists.txt  package.xml
src/ianvs/ianvs/app/: csv_to_tf.cpp  play_rosbag.cpp  static_tfs_from_bag.cpp  transform_file_broadcaster.cpp  transform_file_lookup.cpp
src/ianvs/ianvs/ianvs/: launch.py
src/ianvs/ianvs/include/ianvs/app/: rosbag_play_plugins.h
src/ianvs/ianvs/include/ianvs/detail/: bag_topic_checker.h  frame_remapper.h
src/ianvs/ianvs/src/app/: signal_stop_plugin.cpp  tf_plugin.cpp  topic_remap_plugin.cpp
src/ianvs/ianvs/src/detail/: bag_topic_checker.cpp  frame_remapper.cpp
src/ianvs/ianvs/test/: test_bag_topic_checker.cpp
src/kimera_pgmo/: .clang-format  .pre-commit-config.yaml  README.md
src/kimera_pgmo/.github/workflows/: ci.yaml
src/kimera_pgmo/kimera_pgmo/: CMakeLists.txt
src/kimera_pgmo/kimera_pgmo/app/config/: offline_deformation.yaml
src/kimera_pgmo/kimera_pgmo/include/kimera_pgmo/: deformation_edge_factor.h  deformation_graph.h  deformation_graph_4dof.h  hashing.h  kimera_pgmo_interface.h  mesh_delta.h  mesh_frontend_interface.h  mesh_offset_info.h  mesh_traits.h  mesh_types.h  pcl_mesh_traits.h
src/kimera_pgmo/kimera_pgmo/params/Euroc/: parameters.yaml
src/kimera_pgmo/kimera_pgmo/params/Jackal/: parameters.yaml
src/kimera_pgmo/kimera_pgmo/params/JackalMedfield/: parameters.yaml
src/kimera_pgmo/kimera_pgmo/params/warty/: parameters.yaml
src/kimera_pgmo/kimera_pgmo/src/: deformation_graph.cpp  deformation_graph_io.cpp  kimera_pgmo_interface.cpp  mesh_delta.cpp  mesh_frontend_interface.cpp  mesh_offset_info.cpp  mesh_traits.cpp  mesh_types.cpp  pcl_mesh_traits.cpp
src/kimera_pgmo/kimera_pgmo/src/compression/: delta_compression.cpp  mesh_compression.cpp  redundancy_checker.cpp
src/kimera_pgmo/kimera_pgmo/test/: CMakeLists.txt  pgmo_fixtures.cpp  pgmo_fixtures.h  test_config.h.in
src/kimera_pgmo/kimera_pgmo/test/suites/: test_deformation_edge_factor.cpp  test_deformation_graph.cpp  test_mesh_deformation.cpp  test_mesh_delta.cpp  test_mesh_frontend_interface.cpp  test_mesh_offset_info.cpp  test_mesh_traits.cpp  test_mesh_types.cpp  test_pcl_mesh_traits.cpp
src/kimera_pgmo/kimera_pgmo/test/suites/compression/: test_block_compression.cpp  test_delta_compression.cpp  test_redundancy_checker.cpp
src/kimera_pgmo/kimera_pgmo/test/suites/utils/: test_common_functions.cpp  test_common_structs.cpp  test_graph.cpp  test_mesh_io.cpp  test_pcl_utilities.cpp  test_range_generator.cpp
src/kimera_pgmo/kimera_pgmo_msgs/: CMakeLists.txt
src/kimera_pgmo/kimera_pgmo_msgs/msg/: AbsolutePoseStamped.msg  Mesh.msg  MeshDelta.msg  Vertex.msg
src/kimera_pgmo/kimera_pgmo_ros/: CMakeLists.txt
src/kimera_pgmo/kimera_pgmo_ros/app/: mesh_publisher_node.cpp
src/kimera_pgmo/kimera_pgmo_ros/src/: kimera_pgmo.cpp  mesh_frontend.cpp  visualization_functions.cpp
src/kimera_pgmo/kimera_pgmo_ros/test/: pgmo_ros_unit_tests.cpp  test_gtsam_conversions.cpp  test_mesh_conversion.cpp
src/kimera_pgmo/kimera_pgmo_rviz/src/: mesh_visual.cpp
src/kursant1_driver/: package.xml  setup.cfg  setup.py
src/kursant1_driver/kursant1_driver/: kursant1_driver.py
src/kursant1_driver/launch/: driver.launch.py  driver.launch__.py
src/kursant1_task_processor/: package.xml  setup.cfg  setup.py
src/kursant1_task_processor/kursant1_task_processor/: task_processor.py
src/robot_data_capture/: CMakeLists.txt  README.md  package.xml
src/robot_data_capture/launch/: capture.launch.py  record_bag.launch.py
src/robot_data_capture/msg/: AudioFrame.msg
src/robot_data_capture/robot_data_capture/: image_pair_sync_node.py  microphone_node.py  thermal_camera_node.py
src/security_system/: package.xml  setup.cfg  setup.py
src/security_system/launch/: security_system.launch.py
src/security_system/rviz2/: rviz2.rviz
src/security_system/security_system/: camera_calibration.txt  camera_node.py  camera_visualization.py  coco_utils.py  yolo_detect_human_range.py  yolo_detection_node.py
src/spark_dsg/: pyproject.toml
src/spark_dsg/include/spark_dsg/: bounding_box_extraction.h
src/spark_dsg/src/: bounding_box_extraction.cpp
src/spark_dsg/tests/: utest_bounding_box_extraction.cpp
(+25 files in other folders)
